Convert Group to Class and move helper merging methods from Scheme to Group